[metadata]
version = 1.0.4
name = xlstm
description = A novel LSTM variant with promising performance compared to Transformers.
long_description = file: README.md
long_description_content_type = text/markdown
project_urls =
    Source Code = https://github.com/NX-AI/xlstm
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU Affero General Public License v3
    Operating System :: OS Independent


[options]
packages = find:
python_requires = >=3.10
include_package_data = True
install_requires =
    torch
    einops
    numpy
    omegaconf
    einops 
    opt_einsum 
    transformers
    datasets
    reportlab 
    lm-eval 
    joypy 
    ipykernel
    dacite 
    ftfy 
    ninja
    huggingface-hub
    rich
    lm-dataformat
    omegaconf 
    sentencepiece
    tokenizers
    torchmetrics 
    tqdm
    seaborn
    openpyxl 
    pykeops 
    torchtext
    tensorboard
    cryptography

[options.package_data]
* = blocks/slstm/src/cuda/*.c, blocks/slstm/src/cuda/*.cc, blocks/slstm/src/cuda/*.h, blocks/slstm/src/cuda/*.cu, blocks/slstm/src/cuda/*.cuh, blocks/slstm/src/util/*.c, blocks/slstm/src/util/*.cc, blocks/slstm/src/util/*.h, blocks/slstm/src/util/*.cu, blocks/slstm/src/util/*.cuh


[options.packages.find]
exclude =
    test*
    res*
    experiments*
