[metadata]
name = xlstm
version = 1.0.8
description = A novel LSTM variant with promising performance compared to Transformers.
long_description = file: README.md
long_description_content_type = text/markdown
license = Apache-2.0
license_files = LICENSE
classifiers =
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
project_urls =
    Source Code = https://github.com/NX-AI/xlstm

[options]
packages = find:
install_requires =
    cryptography
    dacite
    datasets
    einops
    einops
    ftfy
    huggingface-hub
    ipykernel
    joypy
    lm-dataformat
    lm-eval
    ninja
    numpy
    omegaconf
    omegaconf
    openpyxl
    opt-einsum
    pykeops
    reportlab
    rich
    seaborn
    sentencepiece
    tensorboard
    tokenizers
    torch
    torchmetrics
    torchtext
    tqdm
    transformers
python_requires = >=3.9
include_package_data = True

[options.packages.find]
exclude =
    test*
    res*
    experiments*

[options.package_data]
* = blocks/slstm/src/cuda/*.c, blocks/slstm/src/cuda/*.cc, blocks/slstm/src/cuda/*.h, blocks/slstm/src/cuda/*.cu, blocks/slstm/src/cuda/*.cuh, blocks/slstm/src/util/*.c, blocks/slstm/src/util/*.cc, blocks/slstm/src/util/*.h, blocks/slstm/src/util/*.cu, blocks/slstm/src/util/*.cuh
