[metadata]
version = 2.0.0
name = xlstm
description = A novel LSTM variant with promising performance compared to Transformers.
long_description = file: README.md
long_description_content_type = text/markdown
project_urls =
    Source Code = https://github.com/NX-AI/xlstm
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent


[options]
packages = find:
python_requires = >=3.9
include_package_data = True
install_requires =
    torch
    einops
    numpy
    omegaconf
    einops 
    opt_einsum 
    transformers
    reportlab 
    joypy 
    ipykernel
    dacite 
    ftfy 
    ninja
    huggingface-hub
    rich
    omegaconf 
    tokenizers
    torchmetrics 
    tqdm
    seaborn
    torchtext
    tensorboard
    mlstm_kernels

[options.package_data]
* = blocks/slstm/src/cuda/*.c, blocks/slstm/src/cuda/*.cc, blocks/slstm/src/cuda/*.h, blocks/slstm/src/cuda/*.cu, blocks/slstm/src/cuda/*.cuh, blocks/slstm/src/util/*.c, blocks/slstm/src/util/*.cc, blocks/slstm/src/util/*.h, blocks/slstm/src/util/*.cu, blocks/slstm/src/util/*.cuh


[options.packages.find]
exclude =
    test*
    res*
    experiments*
